las paginas no cargan
no cargan las paginas de vista previa y estoy arreglando el planteo de aceptar la solicitud